--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', 'Arial', sans-serif;;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 
 .header {
@@ -109,7 +109,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: 400;
-  margin: 0 0 30px 0
+  margin: 0 0 30px 0;
 }
 
 .two-columns__paragrah:last-of-type {
