--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,7 @@
   max-height: 756px;
   /* outline: 1px solid rebeccapurple; */
   background-color: #f2f2f2;
+  overflow: hidden;
 }
 
 .logo_place_header {
