--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,5 +1,5 @@
 .kaufman__triangle {
-    background-image: url('/images/kaufman-triangle.svg');
+    background-image: url('../../../images/kaufman-triangle.svg');
     background-size: cover;
     position: absolute;
     right: -210px;
@@ -7,5 +7,4 @@
     height: 877px;
     width: 877px;
     z-index: 0;
-    animation: rotation 20s linear infinite;
   }
